# eightyeightyeight

./: .gitignore  Cargo.toml  DESIGN.md  GEMINI.md  README.md  config.toml  gst.sh  test_config.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/add_tui_stretch_goal_20260117/: metadata.json  plan.md  spec.md
conductor/archive/comprehensive_sanity_check_20260117/: metadata.json  plan.md  spec.md
conductor/archive/config_cleanup_and_secrets_docs_20260117/: metadata.json  spec.md
conductor/archive/docs_and_config_cleanup_20260117/: metadata.json  spec.md
conductor/archive/enhance_wizard_device_discovery_20260119/: metadata.json  plan.md  spec.md
conductor/archive/final_project_submission_prep_20260119/: metadata.json  plan.md  spec.md
conductor/archive/fix_gst_lifecycle_20260117/: metadata.json  plan.md  spec.md
conductor/archive/handle_window_closed_error_20260117/: metadata.json  spec.md
conductor/archive/implement_decryption_playback_20260116/: spec.md
conductor/archive/implement_observability_20260117/: metadata.json  spec.md
conductor/archive/implement_streaming_receiving_20260117/: metadata.json  plan.md  spec.md
conductor/archive/interactive_configuration_tui_20260119/: metadata.json  plan.md  spec.md
conductor/archive/port_gst_prototype_20260116/: plan.md  (+2 more)
packaging/systemd/: eightyeightyeight-receive.service  eightyeightyeight-record.service  eightyeightyeight-stream.service  eightyeightyeight.service
src/: cli.rs  config.rs  main.rs  metrics.rs  pipeline.rs  secrets.rs  wizard.rs
(+30 files in other folders)
